--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body{
   display: block;
-  margin: 32px;
+  margin: 0px;
   margin-top: 0px;
   padding: 0px;
 }
@@ -48,7 +48,7 @@ header {
   justify-content: space-between;
   position: relative;
   font-family:'Raleway';
-  margin: 0px 0px;
+  margin: 0px 32px;
   margin-top: 0px;
 }
 .nav-header{
@@ -77,6 +77,8 @@ header {
   margin-right: 30px;
   padding: 0px;
   padding-top: 40px;
+  color: black;
+  font-weight: bold;
 }
 .header-nav-link:hover{
 border-top: solid #0065FC;
@@ -87,10 +89,14 @@ font-weight: bold;
 .header-heading1{
   font-family: 'Raleway';
   font-size: x-large;
+  margin: 0px 32px;
+  padding: 10px 0px;
 }
 .header-paragraph{
   font-family: 'Raleway';
   font-size: large;
+  margin: 0px 32px;
+  padding-bottom: 10px;
 }
 
 /* SEARCHBAR */
@@ -99,6 +105,8 @@ font-weight: bold;
   display: flex;
   justify-content: left;
   height: 45px;
+
+  margin: 0px 32px;
   margin-bottom: 35px;
 }
 .search-location-marker{
@@ -142,6 +150,7 @@ font-weight: bold;
 #filters{
   display: inline-flex;
   flex-wrap: wrap;
+  margin: 0px 32px;
   margin-bottom: 30px;
 }
 .filters-heading1{
@@ -154,6 +163,10 @@ font-weight: bold;
 }
 
 /*buttons*/
+
+.filter-single-btn-text{
+  font-weight: bold;
+}
 
 i.fa.fa-money-bill-wave{
   position: relative;
@@ -241,6 +254,7 @@ aside{
   display: flex;
   justify-content: row;
   align-items: center;
+  margin: 0px 32px;
   margin-bottom: 20px;
   
 }
@@ -275,6 +289,7 @@ i.fa.fa-info{
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0px 32px;
   margin-bottom: 30px;
 
 }
@@ -446,9 +461,8 @@ display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     max-width: 100%;
-    margin: 20px;
-    margin-right: 0px;
-    margin-left: 0px;
+    margin: 0px 32px;
+    margin-bottom: 32px;
 }
 
 .activities-marseille-heading{
@@ -477,15 +491,16 @@ margin-bottom: 30px;
   display: flexbox;
   text-decoration: none;
   border: none;
-  padding: 0px;
+ 
   background-color: white;
-  /* margin-right: 65px; */
+  padding-right: 65px;
 }
 
 .activities-double{
   margin: 0%;
   padding: 0%;
   font-size: 0;
+
 }
 
 .activities-card-double{
@@ -494,6 +509,7 @@ margin-bottom: 30px;
   border-radius: 5%;
   width: 23em;
   height: 18em;
+
 }
 
 .activities-card-img{
@@ -527,19 +543,23 @@ margin-bottom: 30px;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
+background-color: #F2F2F2;
+padding: 15px 32px;
 }
 
 .footer-column{
   display: flex;
+  justify-content: space-around;
   flex-direction: column;
-
 }
 
 .footer-heading{
-  background-color: #b8b5b5;
+  font-family: 'Raleway';
+  font-size: large;
 }
 
 .list{
+  display: block;
   padding: 0%;
   list-style-type: none;
 
@@ -547,15 +567,25 @@ justify-content: space-between;
 }
 
 .list-items{
+  display: flex;
+  align-items: right;
   font-family: 'Raleway';
   font-size: medium;
   margin: 0%;
-
+  margin-bottom: 10px;
 }
 
 .list-items a{
+  font-size: medium;
   margin: 0%;
+  text-decoration: none;
+  list-style-type: none;
+  color: black;
+}
   
+.list-items:hover{
+  font-weight: bold;
 
 }
+
 
