--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,18 @@
 *{
   box-sizing: border-box;
-
 }
 
+@font-face {
+  font-family: Raleway;
+  src: url(Raleway-VariableFont_wght.ttf);
+  }
+  
 body{
   display: block;
-  max-width: 1500px;
-  display: block;
-  margin: 0 auto;
-  justify-content: stretch;
-
+  max-width: 100%;
+  min-width: 992px;
+  margin: 0px;
+  padding: 0px;
 }
 
 button{
@@ -71,7 +74,6 @@ header {
 .nav-list{
   display: flex;
   justify-content: space-between;
-  align-items: top;
   font-family:'Raleway';
   list-style-type: none;
   margin: 0px;
@@ -95,8 +97,11 @@ header {
 border-top: solid #0065FC;
 color: #0065FC;
 font-weight: bold;
-;
 }
+
+/* SEARCHBAR */
+
+
 .header-heading1{
   font-family: 'Raleway';
   font-size: x-large;
@@ -110,15 +115,11 @@ font-weight: bold;
   padding-bottom: 10px;
 }
 
-/* SEARCHBAR */
-
 #search{
   display: flex;
-  justify-content: left;
   height: 45px;
 
   margin: 0px 32px;
-  margin-bottom: 35px;
 }
 .search-location-marker{
   border-bottom-left-radius: 25%; 
@@ -161,7 +162,7 @@ font-weight: bold;
 #filters{
   display: inline-flex;
   flex-wrap: wrap;
-  margin: 0px 32px;
+  margin: 32px 32px;
   margin-bottom: 30px;
 }
 .filters-heading1{
@@ -174,6 +175,10 @@ font-weight: bold;
 }
 
 /*buttons*/
+
+.filters-buttons{
+  display: flex;
+}
 
 .filter-single-btn-text{
   font-weight: bold;
@@ -259,11 +264,11 @@ i.fa.fa-dog{
   color: white;
 }
 
-/* ASIDE INFORMATION */
+/* INFORMATION */
 
-aside{
+.acc-information{
   display: flex;
-  justify-content: row;
+  justify-content:left;
   align-items: center;
   margin: 0px 32px;
   margin-bottom: 20px;
@@ -284,7 +289,7 @@ i.fa.fa-info{
   padding: 10px;
 }
 
-.aside-info{
+.acc-information-text{
   display: inline;
   justify-content: center;
   font-family: 'Raleway';
@@ -302,7 +307,7 @@ i.fa.fa-info{
   justify-content: space-between;
   margin: 0px 32px;
   margin-bottom: 30px;
-
+  width: 95%;
 }
 
 /* Accommodations is Marseille */
@@ -336,13 +341,22 @@ i.fa.fa-info{
   align-items: center;
 }
 
+.acc-row{
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  aspect-ratio: auto;
+}
+
 .accommodations-marseille-link-button{
   text-decoration: none;
   border: 0px;
-  min-width: 25%;
-  width: 23em;
   padding: 0px;
   margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 25%;
 
 }
 
@@ -355,9 +369,10 @@ i.fa.fa-info{
   border: solid white;
   align-items: center;
   box-shadow: 0 0 10px #b8b5b5;
-  height: 15em;
-  width: 17em;
+  overflow: hidden;
+  flex: 1;
   margin-bottom: 15px;
+
 }
 
 .accommodations-marseille-card a{
@@ -376,6 +391,12 @@ i.fa.fa-info{
   margin: 0px;
   margin-bottom: 8px;
   padding: 0px;
+  object-fit: contain;
+}
+.accommodations-marseille-card-img img{
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .accommodations-marseille-card-text{
@@ -403,13 +424,13 @@ i.fa.fa-info{
 
 /* Most Popular */
 
-.accomodations-most-pop{
+aside{
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   background-color: #F2F2F2;
   border-radius: 1.5%;
-  width: 30%;
+  width: 33%;
 }
 
 .most-pop-heading{
@@ -425,15 +446,20 @@ i.fa.fa-info{
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   height: 90%;
   margin: 20px 0px;
+  width: 100%;
 }
 
 .most-pop-cards-link-button{
+  display: flex;
+  justify-content: center;
   text-decoration: none;
   border: 0px;
   padding: 0px;
+  width: 100%;
+  height: 30%;
+  max-height: 30%;
 }
 .most-pop-cards-link-button a{
   text-decoration: none;
@@ -442,15 +468,13 @@ i.fa.fa-info{
 
 .most-pop-card{
   display: flex;
-  flex-wrap: flex;
   flex-direction: row;
   background-color: white;
   border-radius: 4%;
   border: solid white;
-  align-items: center;
   box-shadow: 0 0 10px #b8b5b5;
-  width: 20em;
-  height: 11em;
+  width: 90%;
+  height: 100%;
 }
 
 .most-pop-img{
@@ -459,11 +483,17 @@ i.fa.fa-info{
   border-bottom-left-radius: 5%;
   border-bottom: 0;
   justify-content: center;
-  width: 45%;
+  width: 50%;
   height: 100%;
   margin: 0px;
   margin-right: 10px;
   padding: 0px;
+}
+
+.most-pop-text{
+  display: block;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -471,13 +501,11 @@ i.fa.fa-info{
 
 #activities-container{
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  max-width: 100%;
+  justify-content: space-between;
+  width: 95%;
   margin: 0px 32px;
   margin-bottom: 32px;
-
+  flex-wrap: wrap;
 }
 
 .activities-marseille-heading{
@@ -498,8 +526,8 @@ i.fa.fa-info{
   display: block;
   box-shadow: 0 0 10px #b8b5b5;
   border-radius: 5%;
-  width: 23em;
-  height: 37.5em;
+  width: 100%;
+  height: 100%;
 }
 
 .activities-button{
@@ -509,14 +537,35 @@ i.fa.fa-info{
   background-color: white;
   box-shadow: 0 0 10px #b8b5b5;
   border-radius: 5%;
+  height: 100%;
+  width: 100%;
+}
+
+.activities-double-button{
+  display: block;
+  text-decoration: none;
+  border: none;
+  background-color: white;
+  box-shadow: 0 0 10px #b8b5b5;
+  border-radius: 5%;
+  height: 95%;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.activities-single{
+  display: flex;
+  flex-direction: column;
+  height:  auto;
+  width: 24%;
 }
 
 .activities-double{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 19.2em;
-  height: 31em;
+  width: 24%;
+  height: auto;
   border: none;
 }
 .activities-double a{
@@ -526,11 +575,11 @@ i.fa.fa-info{
 }
 
 .activities-card-double{
-  display: flexbox;
+  display: block;
   box-shadow: 0 0 10px #b8b5b5;
   border-radius: 5%;
-  width: 23em;
-  height: 18em;
+  width: 100%;
+  height: 100%;
   margin: 0px;
 }
 
@@ -542,6 +591,7 @@ i.fa.fa-info{
   height: 90%;
   border-top-right-radius: 5%;
   border-top-left-radius: 5%;
+  object-fit: cover;
 }
 
 .activities-card-img-double{
@@ -552,6 +602,7 @@ i.fa.fa-info{
   height: 80%;
   border-top-right-radius: 5%;
   border-top-left-radius: 5%;
+  object-fit: cover;
 }
 
 .activity-card-text{
@@ -567,12 +618,13 @@ i.fa.fa-info{
 
 /* FOOTER */
 
-#footer{
+footer{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: #F2F2F2;
   padding: 15px 32px;
+  align-items: left;
 }
 
 .footer-column{
@@ -594,7 +646,6 @@ i.fa.fa-info{
 
 .list-items{
   display: flex;
-  align-items: right;
   font-family: 'Raleway';
   font-size: medium;
   margin: 0%;
@@ -611,5 +662,4 @@ i.fa.fa-info{
   
 .list-items:hover{
   font-weight: bold;
-
 }
