--- a/css/tablet-992px.css
+++ b/css/tablet-992px.css
@@ -1,77 +1,198 @@
-.accomodations-container{
+*{
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: Raleway;
+  src: url(Raleway-VariableFont_wght.ttf);
+  }
+  
+body{
   display: block;
-  flex-direction: column;
+  max-width: 100%;
+  min-width: 992px;
+  margin: 0px;
+  padding: 0px;
 }
 
-
-
-
-
-
-/*.accommodations-marseille{
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  background-color: #F2F2F2;
-  border-radius: 1%;
-  width: 100%;
-  margin-bottom: 25px;
+button{
+  text-decoration: none;
+  border: none;
+  padding: 0px;
 }
 
-.accomodations-most-pop{
+h3{
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  background-color: #F2F2F2;
-  border-radius: 1.5%;
-  width: 100%;
+  font-family: 'Raleway';
+  font-size: medium;
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  
 }
 
-.most-pop-cards{
+p{
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-  margin: 20px 0px;
+  font-family: 'Raleway';
+  font-size: small;
+  padding: 0px;
+  margin-top: 0px;
 }
 
-.accommodations-marseille-card{
+a{
+  text-decoration: none;
+}
+
+/* FONT AWESOME */
+
+i{
+  color: #0065FC;
+}
+
+.fa.fa-star{
+  display: inline;
+  margin: 0px;
+  padding: 0px;
+}
+
+/*HEADER*/
+
+header{
+  display: block;
+}
+
+.header-logo{
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  background-color: white;
-  border-radius: 5%;
-  border: solid 5px white;
-  align-items: stretch;
-  box-shadow: 0 0 50px #b8b5b5;
-  height: 50em;
-  width: 60em;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
-.most-pop-card{
+.nav-header{
+  display: inline;
+}
+
+.nav-list{
   display: flex;
-  flex-direction: row;
-  background-color: white;
-  border-radius: 4%;
-  border: solid white;
-  align-items: center;
-  box-shadow: 0 0 50px #b8b5b5;
-  width: 60em;
-  height: 25em;
+  justify-content: space-evenly;
+  margin: 0px 32px;
+}
+
+.header-nav-link:hover{
+  border-top: none;
+  color: #0065FC;
+  font-weight: bold;
+}
+
+/*SEARCHBAR*/
+
+.searchbar-heading{
+  margin-top: 30px;
+}
+
+.header-heading1{
+  display: flex;
+  justify-content: center;
+  font-family: 'Raleway';
+  font-size: x-large;
+  margin: 0px 32px;
+  padding: 10px 0px;
+}
+
+.header-paragraph{
+  display: flex;
+  justify-content: center;
+  font-family: 'Raleway';
+  font-size: large;
+  margin: 0px 32px;
+  padding-bottom: 10px;
+}
+
+#search{
+  justify-content: center;
+
+}
+
+/*FILTERS*/
+
+#filters{
+  display: flex;
+  justify-content: center;
+}
+
+/*ACCOMMODATIONS*/
+
+.acc-information{
+  display: flex;
+  justify-content: left;
+}
+
+#accommodations-container{
+  display: block;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  margin: 0px 32px;
+}
+
+.accommodations-marseille{
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+/*Most Popular*/
+
+aside{
+  width: 100%;
+}
+
+.most-pop-cards-link-button{
+  padding-bottom: 20px;
+}
+
+/*ACTIVITIES*/
+
+.activities-marseille-heading{
+  font-family: 'Raleway';
+  font-size: x-large;
   margin-bottom: 20px;
 }
 
-.most-pop-text{
-display: block;
-flex-wrap: wrap;
-justify-content: right;
-margin-top: 15px;
-padding-top: 0px;
-margin-left: 5px;
+.activities-marseille{
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-bottom: 30px;
+  width: 100%;
 }
-*/
+
+.activities-card{
+  display: block;
+  box-shadow: 0 0 10px #b8b5b5;
+  border-radius: 5%;
+  width: 100%;
+  height: 100%;
+}
+
+.activities-button{
+  display: block;
+  text-decoration: none;
+  border: none;
+  background-color: white;
+  box-shadow: 0 0 10px #b8b5b5;
+  border-radius: 5%;
+  height: 100%;
+  width: 100%;
+}
+
+.activities-single{
+  width: 100%;
+}
+
+.activities-double{
+  width: 100%;
+}
+
+.activities-card-img-double{
+  height: 90%;
+}
+
+
+
