--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ i.fa.fa-info{
   justify-content: space-between;
   margin: 0px 32px;
   margin-bottom: 30px;
-  width: 95%;
+  width: auto;
 }
 
 /* Accommodations is Marseille */
@@ -334,7 +334,7 @@ i.fa.fa-info{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   max-width: 100%;
   margin: 20px;
   align-content: center;
@@ -343,22 +343,25 @@ i.fa.fa-info{
 
 .acc-row{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 100%;
   aspect-ratio: auto;
-  height: 50%;
+  height: 40%;
+  margin-bottom: 15px;
 }
 
 .accommodations-marseille-link-button{
+  display: flex;
   text-decoration: none;
   border: 0px;
   padding: 0px;
   margin: 0px;
-  width: 30%;
+  width: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-basis: 25%;
+  aspect-ratio: 5/3;
+
 
 }
 
@@ -372,9 +375,10 @@ i.fa.fa-info{
   align-items: center;
   box-shadow: 0 0 10px #b8b5b5;
   overflow: hidden;
+  object-fit: fill;
   flex: 1;
   margin-bottom: 15px;
-  height: 80%;
+  height: 100%;
 
 }
 
@@ -394,11 +398,6 @@ i.fa.fa-info{
   padding: 0px;
   object-fit: cover;
   height: 70%;
-}
-.accommodations-marseille-card-img img{
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
 }
 
 .accommodations-marseille-card-text{
@@ -504,7 +503,7 @@ aside{
 #activities-container{
   display: flex;
   justify-content: space-between;
-  width: 95%;
+  width: auto;
   margin: 0px 32px;
   margin-bottom: 32px;
   flex-wrap: wrap;
