--- a/css/smartphone-768px.css
+++ b/css/smartphone-768px.css
@@ -1,10 +1,452 @@
-@media all and (max-width:768px) {
-    body {
-      min-width: 300px;
-    }
+*{
+  box-sizing: border-box;
 }
-    a {
-      display: block; 
-      margin: 30px auto;
-      width: 50%;
-    }
+
+@font-face {
+  font-family: Raleway;
+  src: url(Raleway-VariableFont_wght.ttf);
+  }
+  
+body{
+  display: block;
+  max-width: 100%;
+  min-width: 768px;
+  margin: 0px;
+  padding: 0px;
+}
+
+header{
+  margin: 0px;
+}
+
+.header-logo{
+  display: flex;
+  padding-left: 50px;
+}
+
+.nav-list{
+  margin: 0px;
+}
+
+button{
+  text-decoration: none;
+  border: none;
+  padding: 0px;
+}
+
+h3{
+  display: flex;
+  font-family: 'Raleway';
+  font-size: x-large;
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  
+}
+
+p{
+  display: flex;
+  font-family: 'Raleway';
+  font-size: large;
+  padding: 0px;
+  margin-top: 0px;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+/* FONT AWESOME */
+
+i{
+  color: #0065FC;
+}
+
+.fa.fa-star{
+  display: inline;
+  margin: 0px;
+  padding: 0px;
+  font-size: 20px;
+}
+
+/*HEADER*/
+
+header{
+  display: block;
+}
+
+.header-logo{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 35px;
+}
+
+.nav-header{
+  display: inline;
+}
+
+.nav-list{
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0px 0px;
+}
+
+.header-nav-link{
+  display: flex;
+  text-decoration: 35px;
+  border-bottom: solid #F2F2F2;
+  padding: 0px 117px;
+  padding-bottom: 20px;
+  margin: 0px;
+  color: black;
+  font-size: 25px;
+}
+
+.header-nav-link:hover{
+  border-bottom: solid #0065FC;
+  border-top: none;
+  color: black;
+  font-weight: bold;
+  text-decoration-color: #0065FC;
+}
+
+/*SEARCHBAR*/
+
+.searchbar-heading{
+  margin-top: 30px;
+}
+
+.header-heading1{
+  display: flex;
+  justify-content: left;
+  font-family: 'Raleway';
+  font-weight: bolder;
+  font-size: 40px;
+  margin: 0px;
+  padding: 0px 32px;
+  padding-bottom: 20px;
+}
+
+.header-paragraph{
+  display: flex;
+  justify-content: left;
+  font-family: 'Raleway';
+  font-size: 26px;
+  margin: 0px;
+  padding: 0px 32px;
+  padding-bottom: 50px;
+}
+
+#search{
+  justify-content: center;
+  height: 100px;
+  margin: 0px;
+  padding: 0px 32px;
+
+}
+
+i.fas.fa-map-marker-alt{
+  font-size: 35px;
+  width: 100px;
+}
+
+.search-input{
+  font-size: 28px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+span{
+  display: none;
+}
+
+i.far.fa-search{
+  display: initial;
+  width: 100px;
+  height: 100px;
+}
+
+.search-submit{
+  border-radius: 25%;
+  margin: 0px;
+  padding: 0px 20px;
+
+}
+
+/*FILTERS*/
+
+#filters h3{
+  margin-bottom: 20px;
+}
+
+#filters{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+}
+
+.filter-single-btn-text{
+  display: initial;
+  font-size: 25px;
+  flex-wrap: nowrap;
+  padding-left: 100px;
+  padding-right: 45px;
+  margin-right: 20px;
+  border-top-right-radius: 60px;
+  border-bottom-right-radius: 60px;
+  margin-bottom: 20px;
+}
+
+.filters-buttons{
+  flex-wrap: wrap;
+}
+
+i.fa.fa-money-bill-wave{
+  border-top-right-radius: 60px;
+  border-top-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  width: 100px;
+  height: 100px;
+  margin-right: -65px;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+i.fa.fa-child{
+  border-top-right-radius: 60px;
+  border-top-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  width: 100px;
+  height: 100px;
+  margin-right: -65px;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+i.fa.fa-heart{
+  border-top-right-radius: 60px;
+  border-top-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  width: 100px;
+  height: 100px;
+  margin-right: -65px;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+i.fa.fa-dog{
+  border-top-right-radius: 60px;
+  border-top-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  width: 100px;
+  height: 100px;
+  margin-right: -65px;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+
+/*ACCOMMODATIONS*/
+
+.acc-information i.fa.fa-info{
+  font-size: 25px;
+  width: 35px;
+  height: 35px;
+}
+
+.acc-information-text{
+  font-size: 25px;
+}
+
+#accommodations-container{
+  display: inline-flex;
+  flex-direction: column-reverse;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0px;
+  margin-bottom: 30px;
+  padding: 0px;
+  width: auto;
+}
+
+.acc-information{
+  display: flex;
+  justify-content: left;
+  margin: 0px;
+  padding: 0px 32px;
+  padding-bottom: 10px;
+}
+
+.accommodations-marseille{
+  width: auto;
+  margin: 0px 20px;
+  margin-bottom: 15px;
+  background-color: white;
+}
+
+.accommodations-marseille-heading{
+  font-size: 40px;
+  margin-top: 55px;
+  justify-content: left;
+}
+
+.acc-row{
+  display: block;
+  align-items: column;
+  align-items: center;
+}
+
+.accommodations-marseille-cards-link-button{
+  width: 100%;
+  aspect-ratio: 16/10;
+}
+
+.accommodations-marseille-card{
+  height: 95%;
+}
+
+.accommodations-marseille-card-img{
+  height: 64%;
+}
+
+.accommodations-marseille-card-text{
+  padding-top: 10px;
+}
+
+.accommodations-marseille-more-heading{
+  justify-content: left;
+}
+
+/*Most Popular*/
+
+aside{
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+.most-pop-heading{
+  font-size: 40px;
+  margin-top: 55px;
+  justify-content: space-between;
+}
+
+aside i.fa.fa-star{
+  display: flex;
+  font-size: 40px;
+}
+
+.most-pop-cards-link-button{
+  padding-bottom: 20px;
+  height: 20%;
+  aspect-ratio: 16/6;
+}
+
+.most-pop-img{
+  object-fit: cover;
+  aspect-ratio: 4/3;
+}
+
+.most-pop-text{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 0px;
+}
+
+.most-pop-text h3{
+  padding-top: 15px;
+}
+
+.most-pop-stars{
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 15px;
+}
+/*ACTIVITIES*/
+
+#activities-container{
+  display: flex;
+
+  margin: 0px;
+  padding: 0px 32px;
+  padding-bottom: 20px;
+}
+
+.activities-marseille-heading{
+  font-size: 40px;
+}
+
+.activities-marseille{
+  display: flex;
+  flex-direction: column;
+}
+
+.activities-single{
+  display: flex;
+  width: 100%;
+  padding-bottom: 6px;
+}
+
+.activities-button{
+  display: flex;
+  aspect-ratio: 16/9;
+}
+
+.activities-card{
+  display: flex;
+}
+
+.activities-card-img{
+  height: 75%;
+  object-fit: fill;
+}
+
+.activity-card-text{
+  height: 25%;
+  font-size: 29px;
+}
+
+.activities-double{
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 5px;
+  width: 100%;
+}
+
+.activities-double-button{
+  display: flex;
+  aspect-ratio: 16/9;
+}
+
+.activities-card-double{
+  display: flex;
+}
+
+.activities-card-img-double{
+  display: flex;
+  height: 75%;
+}
+
+.activity-card-text{
+  display: flex;
+  height: 25%;
+}
+
+/*FOOTER*/
+
+footer{
+  flex-direction: column;
+  padding-top: 50px;
+}
+
+.footer-heading{
+  font-size: 29px;
+  font-weight: 500;
+}
+
+
+.list-items .link{
+  font-size: 24px;
+}
